# Alpha-Forge

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
agent/: __init__.py  agent.py  memory.py  prompts.py
api/: __init__.py  main.py  schemas.py
api/routes/: chat.py  ingest.py
evals/: __init__.py  run_evals.py
evals/evaluators/: __init__.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
ingest/: __init__.py  chunker.py  indexer.py  parser.py  pipeline.py  sec_fetcher.py
ingest/loaders/: __init__.py
ingest/parsers/: __init__.py
observability/: __init__.py  logging.py  tracing.py
retrieval/: __init__.py  embeddings.py  retriever.py  vector_store.py
tests/: test_agent.py  test_ingest.py  test_retrieval.py
tools/: __init__.py  calculator.py  market_data.py  search.py
